# sawtooth-seth

./: .dockerignore  .gitignore  CODEOWNERS  COMMITTERS  Cargo.toml  Dockerfile  Jenkinsfile  MAINTAINERS.md  README.md  docker-compose-installed.yaml  docker-compose.yaml  sawtooth-build-docs
.github/: settings.yml
ci/: sawtooth-seth-cli  sawtooth-seth-cli-go  sawtooth-seth-rpc  sawtooth-seth-tp
cli/: Cargo.toml  Dockerfile  Dockerfile-installed  Dockerfile-installed-bionic  Dockerfile-installed-xenial
cli-go/: Dockerfile  Dockerfile-installed  Dockerfile-installed-bionic  Dockerfile-installed-xenial
cli-go/packaging/ubuntu/: control
cli/packaging/ubuntu/: changelog  control
cli/src/: client.rs  main.rs  types.rs
cli/src/cli/: account.rs  config.rs  contract.rs  event.rs  mod.rs  permissions.rs  receipt.rs
cli/src/seth_cli/cli/: account_create.go  account_list.go  contract_create.go  contract_list.go  data.go  main.go  permissions.go  permissions_set.go  show_account.go  show_events.go  show_receipt.go
cli/src/seth_cli/client/: client.go  encoder.go
common/src/common/: constants.go  evm_address.go  state_address.go
contracts/examples/contract_chaining/: hello_world.sol  hello_world.txt  hello_world_caller.sol  hello_world_caller.txt
contracts/examples/opcodes/: BlockHash.sol  BlockHash.txt  BlockNumber.sol  BlockNumber.txt  Timestamp.sol  Timestamp.txt
contracts/examples/simple_intkey/: simple_intkey.sol  simple_intkey.txt
docker/compose/: copy-debs.yaml
docs/: Dockerfile  Makefile
docs/source/: conf.py  contents.rst  contracts.rst  dapps.rst  getting_started.rst  introduction.rst  seth_developers_guide.rst  seth_transaction_family_spec.rst
docs/source/_templates/: indexcontent.html
docs/source/community/: code_of_conduct.rst  contributing.rst  issue_tracking.rst  join_the_discussion.rst
processor/: Dockerfile  Dockerfile-installed  Dockerfile-installed-bionic  Dockerfile-installed-xenial
protos/: seth.proto
rpc/: Cargo.toml  Dockerfile  Dockerfile-installed  Dockerfile-installed-bionic  Dockerfile-installed-xenial  build.rs  comp_seth_rpc.yaml
rpc/src/: accounts.rs  client.rs  filters.rs  main.rs  requests.rs  transactions.rs  transform.rs
rpc/tests/: Dockerfile  test_seth_rpc.py
tests/: addresses_test.go  encoder_test.go  unit_seth.yaml
(+62 files in other folders)
