# Copyright 2018 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "seth-cli"
version = "0.2.0"
authors = ["sawtooth"]

[[bin]]
name = "seth"
path = "src/main.rs"

[dependencies]
clap = "2.32"
config = "0.9"
dirs = "1.0"
failure = "0.1"
jsonrpc-core = "8.0"
reqwest = "0.8"
sawtooth_sdk = { git = "https://github.com/hyperledger/sawtooth-core.git" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
tiny-keccak = "1.4"
toml = "0.4"

[build-dependencies]
cc = "1.0"
glob = "0.2"
protoc-rust = "2.0"
